k8s-addons/network-policy/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: netpol-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: curl
        image: curlimages/curl
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: netpol-demo
spec:
  selector:
    app: app1
  ports:
    - port: 80
