k8s-addons/network-policy/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: netpol-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: netpol-demo
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
