k8s-addons/network-policy/allow-app1-to-app2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app1-to-app2
  namespace: netpol-demo
spec:
  podSelector:
    matchLabels:
      app: app2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app1
    ports:
    - protocol: TCP
      port: 80
